@@ -402,9 +402,15 @@ public class ImdbPlugin implements MovieDatabasePlugin {
             if (movie.getCast().isEmpty()) {
                 movie.setCast(HTMLTools.extractTags(xml, "<table class=\"cast\">", "</table>", "<td class=\"nm\"><a href=\"/name/", "</a>"));
             }
-            
+
+            /** Check for single writer **/
             if (movie.getWriters().isEmpty()) {
-                movie.setWriters(HTMLTools.extractTags(xml, "<h5>Writers ", "</div>", "<a href=\"/name/", "</a>"));
+                movie.setWriters(HTMLTools.extractTags(xml, "<h5>Writer ", "</div>", "<a href=\"/name/", "</a>"));
+            }
+
+            /** Check for multiple writers **/
+            if (movie.getWriters().isEmpty()) {
+                movie.setWriters(HTMLTools.extractTags(xml, "<h5>Writers:", "</div>", "<a href=\"/name/", "</a>"));
             }
 
             if (movie.getPosterURL() == null || movie.getPosterURL().equalsIgnoreCase(Movie.UNKNOWN)) {
